Change logo image

--- a/RIval/MainWindow.xaml
+++ b/RIval/MainWindow.xaml
@@ -111,7 +111,7 @@
                             <ToolTip Content="Свернуть окно"/>
                         </Image.ToolTip>
                     </Image>
-                    <Image Source="Resources/Images/Minis/logo_gavno.png" Margin="4,4,645,6"/>
+                    <Image Source="Resources/Images/Minis/logo_wowv2.png" Margin="-12,-7,621,-1"/>
                     <TextBlock
             x:Name="ForumButton"
             Margin="584,19,133,22"
