--- a/RIval/App.xaml
+++ b/RIval/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="RIval.App"
+﻿<Application x:Class="Ignite.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RIval"
+             xmlns:local="clr-namespace:Ignite"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary Source="pack://application:,,,/BlurryControls;component/Themes/Generic.xaml" />
