--- a/RIval/Design/Controls/News/NewsWindow.xaml
+++ b/RIval/Design/Controls/News/NewsWindow.xaml
@@ -3,8 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:RIval.Design.Controls.News"
-      xmlns:Controls="clr-namespace:RIval.Design.Controls" x:Class="RIval.Design.Controls.News.NewsWindow"
+      xmlns:local="clr-namespace:Ignite.Design.Controls.News"
+      xmlns:Controls="clr-namespace:Ignite.Design.Controls" x:Class="Ignite.Design.Controls.News.NewsWindow"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
