--- a/RIval/Design/Controls/News/VideoElement.xaml
+++ b/RIval/Design/Controls/News/VideoElement.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="RIval.Design.Controls.News.VideoElement"
+﻿<UserControl x:Class="Ignite.Design.Controls.News.VideoElement"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RIval.Design.Controls.News"
+             xmlns:local="clr-namespace:Ignite.Design.Controls.News"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
