--- a/RIval/Design/Controls/ProductsComponent.xaml
+++ b/RIval/Design/Controls/ProductsComponent.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="RIval.Design.Controls.ProductsComponent"
+﻿<UserControl x:Class="Ignite.Design.Controls.ProductsComponent"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
-             xmlns:controls1="clr-namespace:RIval.Design.Controls"
+             xmlns:controls1="clr-namespace:Ignite.Design.Controls"
              mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
