--- a/RIval/Login.xaml
+++ b/RIval/Login.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="RIval.Login"
+﻿<Window x:Class="Ignite.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RIval"
+        xmlns:local="clr-namespace:Ignite"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
         mc:Ignorable="d"
