--- a/RIval/MainWindow.xaml
+++ b/RIval/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window xmlns:Controls="clr-namespace:RIval.Design.Controls"  x:Class="RIval.MainWindow"
+﻿<Window xmlns:Controls="clr-namespace:Ignite.Design.Controls"  x:Class="Ignite.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RIval"
+        xmlns:local="clr-namespace:Ignite"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
         mc:Ignorable="d"
@@ -35,7 +35,7 @@
                         <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
                     </TextBlock.Foreground>
                 </TextBlock>
-                <Button x:Name="SettingsButton" HorizontalAlignment="Left" VerticalAlignment="Top" Width="245" Height="58" FontSize="16" Cursor="Hand" HorizontalContentAlignment="Left" Margin="-1,352,0,0" Grid.ColumnSpan="3" Click="Button_Click_2">
+                <Button x:Name="SettingsButton" HorizontalAlignment="Left" VerticalAlignment="Top" Width="245" Height="58" FontSize="16" Cursor="Hand" HorizontalContentAlignment="Left" Margin="-1,352,0,0" Grid.ColumnSpan="3" Click="Button_Click_2" IsEnabled="False">
                     <Grid>
                         <TextBlock Text="НАСТРОЙКИ" Margin="-25,8,-20,9" TextAlignment="Center" FontSize="20"/>
                     </Grid>
