--- a/RIval/Design/Controls/Auth/LoginComponent.xaml
+++ b/RIval/Design/Controls/Auth/LoginComponent.xaml
@@ -1,18 +1,18 @@
-﻿<UserControl x:Class="Ignite.Design.Controls.Auth.LoginComponent"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ignite.Design.Controls.Auth"
+             xmlns:gif="http://wpfanimatedgif.codeplex.com" x:Class="Ignite.Design.Controls.Auth.LoginComponent"
              mc:Ignorable="d" Width="338.964" Height="408.311">
     <Grid Margin="0">
 
         <Image HorizontalAlignment="Left" Height="409" VerticalAlignment="Top" Width="339" Source="/Ignite;component/Resources/Images/Bg/bg.jpg" Stretch="UniformToFill"/>
         <TextBox x:Name="EmailBox" HorizontalAlignment="Left" Height="29" Margin="32,147,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" FontSize="16" Background="#FF151723" Opacity="0.85" Foreground="#FFEAE7E7" BorderBrush="#FF818181" SelectionBrush="White"/>
-        <Button x:Name="LoginButton" Content="Войти" HorizontalAlignment="Left" Margin="32,244,0,0" VerticalAlignment="Top" Width="274" Height="36" FontSize="16" Background="#99000000" Cursor="Hand" Foreground="White"/>
+        <Button x:Name="LoginButton" Content="Войти" HorizontalAlignment="Left" Margin="32,244,0,0" VerticalAlignment="Top" Width="274" Height="36" FontSize="16" Background="#99000000" Cursor="Hand" Foreground="White" Click="LoginButton_Click"/>
         <Button x:Name="RegisterButton" Content="Создать учетную запись" HorizontalAlignment="Left" Margin="32,287,0,0" VerticalAlignment="Top" Width="274" Height="35" Background="#FF178BEC" FontSize="16" Cursor="Hand" Foreground="#FFFFFCFC" Click="Button_Click"/>
-        <Label x:Name="RecoveryPasswordLink" Content="Восстановление доступа" HorizontalAlignment="Left" Margin="32,334,0,0" VerticalAlignment="Top" Width="274" Foreground="#FF3B74EE" FontSize="16" Cursor="Hand"/>
-        <Label x:Name="PrivacyLink" Content="Политика конфиденциальности" HorizontalAlignment="Left" Margin="32,368,0,0" VerticalAlignment="Top" Width="274" Foreground="#FF3B74EE" FontSize="16" Cursor="Hand"/>
+        <Label x:Name="RecoveryPasswordLink" Content="Восстановление доступа" HorizontalAlignment="Left" Margin="32,368,0,0" VerticalAlignment="Top" Width="208" Foreground="#FF3B74EE" FontSize="16" Cursor="Hand"/>
         <Rectangle Fill="#FFAAAAAA" HorizontalAlignment="Left" Height="1" Margin="32,230,0,0" Stroke="#FFB0B0B0" VerticalAlignment="Top" Width="274"/>
         <Label x:Name="AuthLoginTitle" Content="АВТОРИЗАЦИЯ" HorizontalAlignment="Left" Margin="106,111,0,0" VerticalAlignment="Top" Width="134"/>
         <Rectangle Fill="#FF0E0E0E" HorizontalAlignment="Left" Height="103" Stroke="Black" VerticalAlignment="Top" Width="339" Opacity="0.7" Margin="0,-1,0,0"/>
@@ -23,6 +23,25 @@
             </Image.ToolTip>
         </Image>
         <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="32,187,0,0" VerticalAlignment="Top" Width="274" Height="29" Background="#FF151723" BorderBrush="#FF818181" Foreground="#FFEAE7E7" SelectionBrush="White" Opacity="0.85" FontSize="16"/>
-
+        <CheckBox x:Name="RememberCheckBox" HorizontalAlignment="Left" Margin="32,336,0,0" VerticalAlignment="Top" FontSize="16" Foreground="White" Height="16" Width="16" Background="#FF151723"/>
+        <Label x:Name="RememberMeLabel" Content="Remember Me" HorizontalAlignment="Left" Margin="48,326,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16"/>
+        <Image x:Name="LangSwitcher" HorizontalAlignment="Left" Height="35" Margin="299,365,0,0" VerticalAlignment="Top" Width="35" Source="/Ignite;component/Resources/Icons/lang-icon.png" MouseDown="Image_MouseDown">
+            <Image.ContextMenu>
+                <ContextMenu>
+                    <MenuItem x:Name="MenuItem_LangSwitch_English" Header="English" Click="MenuItem_LangSwitch_English_Click">
+                        <MenuItem.Icon>
+                            <Image Height="17" Width="17" Source="/Ignite;component/Resources/Icons/Languages/english-icon.png"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem x:Name="MenuItem_LangSwitch_Russian" Header="Russian" Click="MenuItem_LangSwitch_Russian_Click">
+                        <MenuItem.Icon>
+                            <Image Height="17" Width="17" Source="/Ignite;component/Resources/Icons/Languages/russian-icon.png"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </ContextMenu>
+            </Image.ContextMenu>
+        </Image>
+        <Rectangle x:Name="CurtainElement" HorizontalAlignment="Left" Height="408" Stroke="Black" VerticalAlignment="Top" Width="339" Opacity="0.9" Fill="Black" Visibility="Hidden"/>
+        <Image x:Name="Preloader" gif:ImageBehavior.AnimatedSource="/Ignite;component/Resources/Loaders/loader.gif" HorizontalAlignment="Left" Height="35" Margin="156,190,0,0" VerticalAlignment="Top" Width="35" Stretch="Fill" Visibility="Hidden"/>
     </Grid>
 </UserControl>
